--- a/public/Lapor.html
+++ b/public/Lapor.html
@@ -69,7 +69,9 @@
     <!-- Konten Laporan -->
     <div class="bg-white shadow-md rounded-lg p-6 mb-10 mt-4">
         <div class="flex items-center mb-4">
-            <div class="w-10 h-10 bg-gray-300 rounded-full mr-3"></div>
+            <div class="w-10 h-10 bg-gray-200 rounded-full mr-3">
+                <img src="Assets/profil.png" alt="profil rounded-full" class="w-full h-full rounded-full">
+            </div>
             <div>
                 <p class="text-gray-700"><strong>Anonim</strong></p>
                 <p class="text-gray-500 text-sm">1 jam yang lalu</p>
@@ -95,7 +97,7 @@
 
         <div class="mt-4">
             <p class="text-gray-600 font-medium">📍 TROTROAR</p>
-            <img src="/src/asset/trotoar.jpeg" alt="Trotuar" class="w-full h-auto rounded-lg mt-2">
+            <img src="Assets/trotoar.jpeg" alt="Trotuar" class="w-full h-auto rounded-lg mt-2 max-w-md">
         </div>
 
         <div class="mt-4 text-sm">
